Added GUI to client.

--- a/src/Makefile
+++ b/src/Makefile
@@ -9,7 +9,30 @@ SERVER_MODULES =\
 	Crypto/Crypto.o \
 	ThirdParty/monocypher.o
 
+SERVERCTL_MODULES=\
+	ServerCtl/ServerCtlMain.o \
+	Common/MyString.o
+
+CLIENT_MODULES=\
+	Client/Client.o \
+	Client/ClientMain.o \
+	Client/UI.o \
+	Server/UserDB.o \
+	Protocol/Protocol.o \
+	Common/MyString.o \
+	Common/BinaryFile.o \
+	Crypto/Crypto.o \
+	ThirdParty/monocypher.o
+
+CLIENT_LIBS = -lncurses
+
+.PHONY: all
+
+all: $(BUILD_DIR)/talkd $(BUILD_DIR)/talkdctl $(BUILD_DIR)/talk
+
 SERVER_MODULES_ABS := $(SERVER_MODULES:%=$(BUILD_DIR)/%)
+SERVERCTL_MODULES_ABS := $(SERVERCTL_MODULES:%=$(BUILD_DIR)/%)
+CLIENT_MODULES_ABS := $(CLIENT_MODULES:%=$(BUILD_DIR)/%)
 
 BUILD_DIRS := $(shell find . -type d)
 BUILD_DIRS := $(BUILD_DIRS:%=$(BUILD_DIR)/%)
@@ -19,7 +42,12 @@ $(BUILD_DIR)/talkd: $(SERVER_MODULES_ABS) | $(BUILD_DIRS)
 	$(CXX) -o $@ $(SERVER_MODULES_ABS)
 
 # Server control
+$(BUILD_DIR)/talkdctl: $(SERVERCTL_MODULES_ABS) | $(BUILD_DIRS)
+	$(CXX) -o $@ $(SERVERCTL_MODULES_ABS)
+
 # Client
+$(BUILD_DIR)/talk: $(CLIENT_MODULES_ABS) | $(BUILD_DIRS)
+	$(CXX) -o $@ $(CLIENT_MODULES_ABS) $(CLIENT_LIBS)
 
 $(BUILD_DIR)/%.o: %.cpp | $(BUILD_DIRS)
 	$(CXX) $(OBJ_FLAG) -o $@ $<
@@ -29,4 +57,3 @@ $(BUILD_DIR)/%.o: %.c | $(BUILD_DIRS)
 
 $(BUILD_DIRS):
 	mkdir -p $(BUILD_DIRS)
-
