Added client configuration file.

--- a/src/Makefile
+++ b/src/Makefile
@@ -37,6 +37,7 @@ CLIENT_MODULES=\
 	Protocol/ClientSession.o \
 	Common/UnixTime.o \
 	Common/MyString.o \
+	Common/IniFile.o \
 	Common/BinaryFile.o \
 	Common/File.o \
 	Message/MessageStorage.o \
