Session encryption refactoring.
Encryption is moved to a lower layer and is applied to message segments.

--- a/src/Makefile
+++ b/src/Makefile
@@ -28,7 +28,9 @@ SERVERCTL_MODULES=\
 	Protocol/Session.o \
 	Common/UnixTime.o \
 	Common/MyString.o \
-	Common/Version.o
+	Common/Version.o \
+	Crypto/Crypto.o \
+	ThirdParty/monocypher.o
 
 CLIENT_MODULES=\
 	Client/Client.o \
